--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4"
