--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "5.92.1",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3"
   }
 }
