--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.42.0",
     "eslint-webpack-plugin": "^4.0.1",
     "gh-pages": "^6.1.1",
